kali-defaults (0.5) UNRELEASED; urgency=low

  * Provide /etc/iceweasel/{pref,profile}/ so that the postinst never fails
    even if iceweasel is not yet installed.
  * Fix postinst check. 

 -- Raphaël Hertzog <hertzog@debian.org>  Wed, 27 Feb 2013 16:15:19 +0100

kali-defaults (0.4) kali; urgency=low

  * Added mock default homepage.html

 -- Mati Aharoni <muts@kali.org>  Wed, 27 Feb 2013 10:01:56 -0500

kali-defaults (0.3) kali; urgency=low

  * Updated Iceweasel default profile

 -- Mati Aharoni <muts@kali.org>  Wed, 27 Feb 2013 09:45:40 -0500

kali-defaults (0.2) kali; urgency=low

  * Update package to be a native package since it's specific to Kali.
  * Drop postrm which is not required since it only removes a file that
    dpkg has already removed.
  * Switch debhelper compatibility level to 9.
  * Replace postinst script with debian/kali-defaults.gconf-defaults
    automatically handled by dh_gconf.
  * Add /etc/X11/Xsession.d/52kali_noautomount to handle the "noautomount"
    boot option (on the kernel command-line).
  * Add myself as Uploader.

 -- Raphaël Hertzog <hertzog@debian.org>  Wed, 20 Feb 2013 18:50:29 +0100

kali-defaults (0.1-1kali3) kali; urgency=low

  * Added gnome-homan theme to defaults

 -- Mati Aharoni <muts@kali.org>  Mon, 28 Jan 2013 17:04:23 -0500

kali-defaults (0.1-1kali2) kali; urgency=low

  * Fixed postrm and postinst

 -- Mati Aharoni <muts@kali.org>  Sun, 27 Jan 2013 17:24:15 -0500

kali-defaults (0.1-1kali1) kali; urgency=low

  * Added libglib2 dependency

 -- Mati Aharoni <muts@kali.org>  Sun, 27 Jan 2013 01:17:44 -0500

kali-defaults (0.1-1kali0) kali; urgency=low

  * Initial release 

 -- Devon Kearns <dookie@kali.org>  Thu, 24 Jan 2013 13:47:40 -0700