@@ -1,0 +1,2 @@
+/* Kali default settings */
+pref("browser.startup.homepage", "file:///usr/share/kali-defaults/homepage.html");
