@@ -1,56 +1,0 @@
-# Mozilla User Preferences
-
-/* Do not edit this file.
- *
- * If you make changes to this file while the application is running,
- * the changes will be overwritten when the application exits.
- *
- * To make a manual change to preferences, you can visit the URL about:config
- */
-
-user_pref("app.update.lastUpdateTime.addon-background-update-timer", 1361974226);
-user_pref("app.update.lastUpdateTime.background-update-timer", 1361974466);
-user_pref("app.update.lastUpdateTime.blocklist-background-update-timer", 1361974346);
-user_pref("app.update.lastUpdateTime.browser-cleanup-thumbnails", 1361973986);
-user_pref("app.update.lastUpdateTime.search-engine-update-timer", 1361974106);
-user_pref("browser.cache.disk.capacity", 358400);
-user_pref("browser.cache.disk.smart_size.first_run", false);
-user_pref("browser.cache.disk.smart_size.use_old_max", false);
-user_pref("browser.cache.disk.smart_size_cached_value", 194560);
-user_pref("browser.download.useDownloadDir", false);
-user_pref("browser.migration.version", 8);
-user_pref("browser.pagethumbnails.storage_version", 2);
-user_pref("browser.places.importBookmarksHTML", false);
-user_pref("browser.places.smartBookmarksVersion", 4);
-user_pref("browser.preferences.advanced.selectedTabIndex", 0);
-user_pref("browser.startup.homepage", "/usr/share/kali-defaults/homepage.html");
-user_pref("browser.startup.homepage_override.buildID", "20130118220036");
-user_pref("browser.startup.homepage_override.mstone", "18.0.1");
-user_pref("extensions.blocklist.pingCountTotal", 2);
-user_pref("extensions.blocklist.pingCountVersion", 2);
-user_pref("extensions.bootstrappedAddons", "{}");
-user_pref("extensions.databaseSchema", 14);
-user_pref("extensions.enabledAddons", "%7B972ce4c6-7e08-4474-a285-3208198ce6fd%7D:18.0.1");
-user_pref("extensions.installCache", "[{\"name\":\"app-global\",\"addons\":{\"{972ce4c6-7e08-4474-a285-3208198ce6fd}\":{\"descriptor\":\"/usr/lib/iceweasel/extensions/{972ce4c6-7e08-4474-a285-3208198ce6fd}\",\"mtime\":1361908884000}}}]");
-user_pref("extensions.lastAppVersion", "18.0.1");
-user_pref("extensions.lastPlatformVersion", "18.0.1");
-user_pref("extensions.pendingOperations", false);
-user_pref("extensions.shownSelectionUI", true);
-user_pref("gecko.buildID", "20130118220036");
-user_pref("gecko.mstone", "18.0.1");
-user_pref("intl.charsetmenu.browser.cache", "ISO-8859-1, UTF-8");
-user_pref("network.cookie.prefsMigrated", true);
-user_pref("places.history.expiration.transient_current_max_pages", 6390);
-user_pref("privacy.sanitize.migrateFx3Prefs", true);
-user_pref("services.sync.clients.lastSync", "0");
-user_pref("services.sync.clients.lastSyncLocal", "0");
-user_pref("services.sync.globalScore", 0);
-user_pref("services.sync.migrated", true);
-user_pref("services.sync.nextSync", 0);
-user_pref("services.sync.tabs.lastSync", "0");
-user_pref("services.sync.tabs.lastSyncLocal", "0");
-user_pref("toolkit.startup.last_success", 1361974689);
-user_pref("urlclassifier.keyupdatetime.https://sb-ssl.google.com/safebrowsing/newkey", 1364565989);
-user_pref("xpinstall.whitelist.add", "");
-user_pref("xpinstall.whitelist.add.180", "");
-user_pref("xpinstall.whitelist.add.36", "");
