@@ -3,7 +3,8 @@
 set -e
 
 if [ "$1" = "configure" ]; then
-    for file in /etc/iceweasel/profile/localstore.rdf /etc/iceweasel/profile/prefs.js /etc/iceweasel/profile/bookmarks.html;do
+    for file in /etc/iceweasel/profile/localstore.rdf /etc/iceweasel/profile/bookmarks.html
+    do
 	orig_file="/usr/share/kali-defaults/$(basename $file)"
 	if [ ! -e $file ] && [ -e $orig_file ]; then
 	    echo "Installing $orig_file as $file"
