@@ -21,7 +21,8 @@ set -e
 
 case "$1" in
     remove)
-    for file in /etc/iceweasel/profile/localstore.rdf /etc/iceweasel/profile/prefs.js /etc/iceweasel/profile/bookmarks.html;do
+	for file in /etc/iceweasel/profile/localstore.rdf /etc/iceweasel/profile/bookmarks.html
+	do
 	    rm -f $file
 	    dpkg-divert --rename --package kali-defaults \
 			--divert $file.original \
