@@ -13,10 +13,10 @@ set -e
 # for details, see http://www.debian.org/doc/debian-policy/ or
 # the debian-policy package
 
-
 case "$1" in
     install)
-    for file in /etc/iceweasel/profile/localstore.rdf /etc/iceweasel/profile/prefs.js /etc/iceweasel/profile/bookmarks.html;do
+	for file in /etc/iceweasel/profile/localstore.rdf /etc/iceweasel/profile/bookmarks.html
+	do
 	    dpkg-divert --rename --package kali-defaults \
 			--divert $file.original \
 			--add $file
