@@ -3,6 +3,8 @@ kali-defaults (0.5) UNRELEASED; urgency=low
   * Provide /etc/iceweasel/{pref,profile}/ so that the postinst never fails
     even if iceweasel is not yet installed.
   * Fix postinst check. 
+  * Install /etc/iceweasel/pref/kali.js instead of diverting
+    /etc/iceweasel/profile/prefs.js. 
 
  -- Raphaël Hertzog <hertzog@debian.org>  Wed, 27 Feb 2013 16:15:19 +0100
 
